recursion.lessons.recursion.koch.Koch.scala.error
Koch:12: error: ':' expected but identifier found.
def snowSide(int levels, double length) {
                 ^Koch:34: error: identifier expected but '}' found.
}
^